[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]


[project]
name = "pyPLNmodels"
dynamic = ["version"]
description = "Package implementing PLN models"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.7"
keywords = [
        "python",
        "count",
        "data",
        "count data",
        "high dimension",
        "scRNAseq",
        "PLN",
        ]
authors = [
  {name = "Bastien Batardiere", email = "bastien.batardiere@gmail.com"},
  {name = "Julien Chiquet", email = "julien.chiquet@inrae.fr"},
  {name = "Joon Kwon", email = "joon.kwon@inrae.fr"},
]
maintainers = [{name = "Bastien Batardière", email = "bastien.batardiere@gmail.com"},
  {name = "Julien Chiquet", email = "julien.chiquet@inrae.fr"},
]
classifiers = [
        # How mature is this project? Common values are
        #   3 - Alpha
        #   4 - Beta
        #   5 - Production/Stable
        "Development Status :: 4 - Beta",
        # Indicate who your project is intended for
        "Intended Audience :: Science/Research",
        # Pick your license as you wish (should match "license" above)
        "License :: OSI Approved :: MIT License",
        # Specify the Python versions you support here. In particular, ensure
        # that you indicate whether you support Python 2, Python 3 or both.
        "Programming Language :: Python",
]
dependencies = [
"matplotlib",
"numpy",
"pandas",
"scipy",
"seaborn",
"torch",
"scikit-learn",
"patsy",
"tqdm",
"networkx",
]
[project.optional-dependencies]
tests = ["pytest", "pytest-cov"]
build-doc = ["sphinx","sphinx_rtd_theme", "sphinx_copybutton", "sphinx_codeautolink", "autoclasstoc"]

[project.urls]
Repository = "https://github.com/PLN-team/pyPLNmodels"
Documentation = "https://pln-team.github.io/pyPLNmodels/"


[tool.setuptools]
py-modules = ["pyPLNmodels"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pyPLNmodels", "pyPLNmodels.*"]
namespaces = false
